fixed userdao, service and servlet, added serviceexception